Finalised styling, connected to DB & confirmed functioning, Could include login page

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -8,7 +8,7 @@
     <div class="about content">
         <h2>About Us</h2>
         <p>Welcome to Ink & Shadows, where words come alive and stories unravel into all of their raw, mysterious beauty. 
-            We dip deep into the unknown, the relatable, and the unexpected, lighting up those corners of life. 
+            We deep dive into the unknown, the relatable, and the unexpected, lighting up those corners of life. 
             It's so much more than just a blog-Ink & Shadows is a home for people who just love stories that balance light and dark, playful and profound.
             Whether one is looking for inspiration, seeking insight, or just a place to daydream, we craft our posts to strike a chord in the curious soul. 
             We write with a sense of wonder and mystery sprinkled with mischief as we try to explore anything from life's messy truths to little wonders. 
